<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chat</string>
    <string name="welcome">Welcome to Chat!</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>

    <string name="action_user_profile">View your profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="vertical_ellipsis">&#8942;</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_user_profile">User Profile</string>

    <string name="create_room">Create room</string>

    <string name="no_bio_provided">No bio is provided.</string>

    <string name="template_broadcast">Broadcast message</string>
    <string name="template_username">Username</string>
    <string name="template_details">Username - 1/1/1970 0:00 am</string>
    <string name="template_message">Message</string>

    <string name="last_active_date">Last active %s</string>
    <string name="joined_date">Joined %s</string>
    <string name="created_by_user">Created by %s</string>

    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>

    <string name="loading">Loading&#8230;</string>
    <string name="error">Error</string>
    
    <string name="send_friend_req">Add friend</string>
    <string name="sending_friend_req">Adding&#8230;</string>
    <string name="cancel_friend_req">Cancel friend request</string>
    <string name="accept_friend_req">Accept friend request</string>
    <string name="remove_friend">Remove friend</string>
    <string name="became_friends">Became friends with you %s</string>
    <string name="block_user">Block user</string>

    <string name="is_typing"> is typing&#8230;</string>
    <string name="are_typing"> are typing&#8230;</string>
    <string name="write_a_message">Write a message</string>

    <string-array
        name="message_dialog_choice_list">
        <item>Copy text</item>
        <item>View details</item>
        <item>View profile</item>
    </string-array>

</resources>
