<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MenuActivity">
    <item android:id="@+id/action_create_room" android:title="Create room"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_user_profile" android:title="@string/action_user_profile"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
