<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_username"
            android:textSize="20sp"
            android:id="@+id/txt_username" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/became_friends"
            android:id="@+id/txt_became_friends" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:minWidth="64dp"
        android:text="@string/vertical_ellipsis"
        android:textSize="18sp"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/btn_menu" />
</LinearLayout>