<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".activities.ChatActivity">

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:transcriptMode="normal"
        android:focusable="true"
        android:listSelector="@android:color/transparent"
        android:divider="@null"
        android:stackFromBottom="true"
        android:layout_above="@+id/layout_typing"
        android:id="@+id/listView_messages" />

    <LinearLayout android:id="@+id/layout_typing"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:layout_above="@+id/layout_message_control">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/template_username"
            android:id="@+id/users_typing"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/is_typing"
            android:id="@+id/is_typing" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/layout_message_control"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:background="@drawable/bordertop"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/write_a_message"
            android:background="@null"
            android:ems="10"
            android:id="@+id/txt_message" />

        <Button
            android:minWidth="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/round_button"
            android:enabled="false"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/btn_send" />

    </LinearLayout>

</RelativeLayout>
